<resources>
    <string name="app_name">SnackStream</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="followers">FOLLOWERS</string>
    <string name="saved">SAVED</string>
    <string name="orders">ORDERS</string>
    <string name="arriving_in_12_mins">Arriving in 12 mins</string>
    <string name="order_details">Maru Ramen Bar \u2022 Order #429</string>
    <string name="track">Track</string>
    <string name="loyalty_status">LOYALTY STATUS</string>
    <string name="gold_foodie_tier">Gold Foodie Tier</string>
    <string name="unlock_platinum_rewards">5 more orders to unlock Platinum rewards</string>
    <string name="saved_reels">Saved Reels</string>
    <string name="payments">Payments</string>
    <string name="addresses">Addresses</string>
    <string name="settings">Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="get_10">GET $10</string>
    <string name="logout">Logout</string>
</resources>